name:                  ambiata-projector-html
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-projector-html
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-projector-html

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-projector-core
                     , ambiata-x-eithert
                     , ambiata-x-templatehaskell
                     , annotated-wl-pprint             == 0.7.*
                     , containers                      == 0.5.*
                     , dlist                           == 0.8.*
                     , filepath
                     , megaparsec                      == 5.1.*
                     , semigroups                      == 0.18.*
                     , template-haskell                == 2.10.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , comonad                         == 5.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_projector_html

                       Projector.Html

                       Projector.Html.Core
                       Projector.Html.Core.Elaborator
                       Projector.Html.Core.Library
                       Projector.Html.Core.Prim

                       Projector.Html.Backend
                       Projector.Html.Backend.Haskell
                       Projector.Html.Backend.Haskell.Prim
                       Projector.Html.Backend.Haskell.Rewrite
                       Projector.Html.Backend.Haskell.TH
                       Projector.Html.Backend.Purescript

                       Projector.Html.Data.Backend
                       Projector.Html.Data.Module
                       Projector.Html.Data.Position
                       Projector.Html.Data.Prim
                       Projector.Html.Data.Template
                       Projector.Html.Data.Token

                       Projector.Html.ModuleGraph

                       Projector.Html.Parser
                       Projector.Html.Parser.QQ

                       Projector.Html.Pretty


executable cinema
  hs-source-dirs:     gen
  main-is:            ../main/cinema.hs
  ghc-options:         -Wall -threaded -O2

  build-depends:
                       base
                     , ambiata-p
                     , ambiata-projector-core
                     , ambiata-projector-html
                     , ambiata-x-eithert
                     , ambiata-x-optparse
                     , containers
                     , directory                       == 1.2.*
                     , filepath                        == 1.4.*
                     , Glob                            == 0.7.*
                     , optparse-applicative            == 0.12.*
                     , text                            == 1.2.*
                     , transformers


executable slideshow
  hs-source-dirs:     gen
  main-is:            ../main/slideshow.hs
  ghc-options:         -Wall -threaded -O2

  build-depends:
                       base
                     , ambiata-p
                     , ambiata-projector-core
                     , ambiata-projector-html
                     , ambiata-x-eithert
                     , containers
                     , haskeline                       == 0.7.*
                     , text
                     , transformers


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-projector-core
                     , ambiata-projector-core-test
                     , ambiata-projector-html
                     , ambiata-projector-html-runtime
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , string-qq                       == 0.0.*
                     , syb
                     , quickcheck-text                 == 0.1.*
                     , semigroups                      == 0.18.*
                     , text
                     , containers

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-projector-core
                     , ambiata-projector-core-test
                     , ambiata-projector-html
                     , ambiata-projector-html-runtime
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , process
                     , text
                     , directory
                     , filepath
                     , containers
                     , syb
                     , quickcheck-text                 == 0.1.*
                     , semigroups                      == 0.18.*
                     , text
