name:                  ambiata-projector-html
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-projector-html
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-projector-html

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-hydrant
                     , ambiata-projector-core
                     , ambiata-machinator-core
                     , ambiata-umami
                     , containers                      == 0.5.*
                     , dlist                           == 0.8.*
                     , Earley                          >= 0.11       && < 0.13
                     , filepath
                     , megaparsec                      == 5.1.*
                     , semigroups                      == 0.18.*
                     , syb                             >= 0.4        && < 0.8
                     , template-haskell                >= 2.10       && < 2.14
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , comonad                         == 5.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_projector_html

                       Projector.Html

                       Projector.Html.Core
                       Projector.Html.Core.Elaborator
                       Projector.Html.Core.Library
                       Projector.Html.Core.Machinator
                       Projector.Html.Core.Prim

                       Projector.Html.Backend
                       Projector.Html.Backend.Rewrite

                       Projector.Html.Data.Annotation
                       Projector.Html.Data.Backend
                       Projector.Html.Data.Module
                       Projector.Html.Data.Position
                       Projector.Html.Data.Prim
                       Projector.Html.Data.Template
                       Projector.Html.Data.Token

                       Projector.Html.DataGraph

                       Projector.Html.Interpreter
                       Projector.Html.Interpreter.Hydrant

                       Projector.Html.ModuleGraph

                       Projector.Html.Pretty

                       Projector.Html.Syntax
                       Projector.Html.Syntax.Lexer
                       Projector.Html.Syntax.Lexer.Tokenise
                       Projector.Html.Syntax.Lexer.Layout
                       Projector.Html.Syntax.Parser
                       Projector.Html.Syntax.Token
                       Projector.Html.Syntax.QQ


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , ambiata-projector-core
                     , ambiata-projector-core-test
                     , ambiata-projector-html
                     , ambiata-projector-html-runtime
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , string-qq                       == 0.0.*
                     , syb
                     , quickcheck-text                 == 0.1.*
                     , semigroups                      == 0.18.*
                     , text
                     , containers
                     , pretty-show
                     , filepath

  other-modules:
                       Test.Projector.Html.Arbitrary
                       Test.Projector.Html.Core.Elaborator
                       Test.Projector.Html.Data.Prim
                       Test.Projector.Html.Expect
                       Test.Projector.Html.Interpreter
                       Test.Projector.Html.ModuleGraph
                       Test.Projector.Html.Syntax

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , ambiata-projector-core
                     , ambiata-projector-core-test
                     , ambiata-projector-html
                     , ambiata-projector-html-runtime
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , process
                     , text
                     , directory
                     , filepath
                     , containers
                     , pretty-show
                     , syb
                     , quickcheck-text                 == 0.1.*
                     , semigroups                      == 0.18.*
                     , text

  other-modules:
                       Test.Projector.Html.Arbitrary
                       Test.Projector.Html.Core.Elaborator
                       Test.Projector.Html.Data.Prim
                       Test.Projector.Html.Expect
                       Test.Projector.Html.Interpreter
                       Test.Projector.Html.ModuleGraph
                       Test.Projector.Html.Syntax
