name:                  projector-html
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              projector-html
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           projector-html

library
  build-depends:
                       base                            >= 3          && < 5
                     , projector-hydrant
                     , projector-core
                     , containers                      == 0.5.*
                     , dlist                           == 0.8.*
                     , Earley                          >= 0.11       && < 0.13
                     , filepath
                     , megaparsec                      == 5.1.*
                     , semigroups                      == 0.18.*
                     , syb                             >= 0.4        && < 0.8
                     , template-haskell                >= 2.10       && < 2.14
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6
                     , transformers-fix                == 1.*
                     , comonad                         == 5.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Projector.Html

                       Projector.Html.Core
                       Projector.Html.Core.Elaborator
                       Projector.Html.Core.Library
                       Projector.Html.Core.Machinator
                       Projector.Html.Core.Prim

                       Projector.Html.Backend
                       Projector.Html.Backend.Rewrite

                       Projector.Html.Data.Annotation
                       Projector.Html.Data.Backend
                       Projector.Html.Data.Module
                       Projector.Html.Data.Position
                       Projector.Html.Data.Prim
                       Projector.Html.Data.Template
                       Projector.Html.Data.Token

                       Projector.Html.DataGraph

                       Projector.Html.Interpreter
                       Projector.Html.Interpreter.Hydrant

                       Projector.Html.ModuleGraph

                       Projector.Html.Pretty

                       Projector.Html.Syntax
                       Projector.Html.Syntax.Lexer
                       Projector.Html.Syntax.Lexer.Tokenise
                       Projector.Html.Syntax.Lexer.Layout
                       Projector.Html.Syntax.Parser
                       Projector.Html.Syntax.Token
                       Projector.Html.Syntax.QQ

                       Projector.Html.Machinator

                       Projector.Html.Machinator.Data.Definition
                       Projector.Html.Machinator.Data.Position
                       Projector.Html.Machinator.Data.Token
                       Projector.Html.Machinator.Data.Version

                       Projector.Html.Machinator.Graph

                       Projector.Html.Machinator.Lexer
                       Projector.Html.Machinator.Parser
                       Projector.Html.Machinator.Pretty


test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , projector-core
                     , projector-core-test
                     , projector-html
                     , projector-html-runtime
                     , hedgehog                        == 0.6.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , string-qq                       == 0.0.*
                     , syb
                     , quickcheck-text                 == 0.1.*
                     , semigroups                      == 0.18.*
                     , text
                     , containers
                     , pretty-show
                     , filepath

  other-modules:
                       Test.Projector.Html.Arbitrary
                       Test.Projector.Html.Core.Elaborator
                       Test.Projector.Html.Data.Prim
                       Test.Projector.Html.Expect
                       Test.Projector.Html.Interpreter
                       Test.Projector.Html.ModuleGraph
                       Test.Projector.Html.Syntax

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-eithert
                     , ambiata-disorder-jack
                     , projector-core
                     , projector-core-test
                     , projector-html
                     , projector-html-runtime
                     , hedgehog                        == 0.6.*
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , process
                     , text
                     , directory
                     , filepath
                     , containers
                     , pretty-show
                     , syb
                     , quickcheck-text                 == 0.1.*
                     , semigroups                      == 0.18.*
                     , text

  other-modules:
                       Test.Projector.Html.Arbitrary
                       Test.Projector.Html.Core.Elaborator
                       Test.Projector.Html.Data.Prim
                       Test.Projector.Html.Expect
                       Test.Projector.Html.Interpreter
                       Test.Projector.Html.ModuleGraph
                       Test.Projector.Html.Syntax
