name:                  projector-prelude
version:               0.0.1
license:               BSD3
author:                Ambiata
maintainer:            Tim Humphries <tim@utf8.me>
copyright:             (c) 2017 Ambiata
synopsis:              projector-prelude
category:              System
cabal-version:         >= 1.10
build-type:            Simple
description:           Prelude used in Projector, forked from ambiata-p.

library
  build-depends:
                       base                            >= 3          && < 5
                     , bifunctors                      >= 4.2        && < 6
                     , containers                      >= 0.5        && < 0.7
                     , deepseq                         >= 1.3        && < 2
                     , semigroups                      >= 0.1        && < 1.0
                     , text                            >= 1.2        && < 2
                     , transformers                    >= 0.4        && < 0.6

  default-language:
                       Haskell2010

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       P
                       P.Applicative
                       P.Bifunctor.Trans
                       P.Bool
                       P.Either
                       P.Functor
                       P.Maybe
                       P.Maybe.Strict
                       P.Monad
                       P.Monoid
                       P.Ord
                       P.List
                       P.Function
                       P.Foldable
                       P.Debug
                       P.Show
