name:                  ambiata-projector-core-test
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              ambiata-projector-core-test
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-projector-core-test

library
  ghc-options:
                       -Wall

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-projector-core
                     , QuickCheck                      >= 2.8.2      && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , comonad                         == 5.*
                     , mtl
                     , containers                      == 0.5.*
                     , text                            == 1.2.*
                     , semigroups
                     , pretty-show

  exposed-modules:
                     Test.Projector.Core.Arbitrary
