name:                  projector-core-test
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              projector-core-test
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           projector-core-test

library
  ghc-options:
                       -Wall

  build-depends:
                       base                            >= 3          && < 5
                     , projector-core
                     , hedgehog                        == 0.6.*
                     , comonad                         == 5.*
                     , mtl
                     , containers                      == 0.5.*
                     , text                            == 1.2.*
                     , semigroups
                     , pretty-show

  exposed-modules:
                     Test.Projector.Core.Gen
