name:                  projector-html-test
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2016 Ambiata.
synopsis:              projector-html-test
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           projector-html-test

library
  ghc-options:
                       -Wall

  build-depends:
                       base                            >= 3          && < 5
                     , projector-core
                     , projector-core-test
                     , projector-html
                     , containers
                     , directory
                     , filepath
                     , hedgehog                        == 0.6.*
                     , semigroups
                     , syb
                     , text
                     , temporary                       == 1.2.*

  exposed-modules:
                     Test.IO.Projector.Html.Backend.Property
                     Test.Projector.Html.Gen
