name:                  projector-html-test
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries <tim@utf8.me>
maintainer:            Tim Humphries <tim@utf8.me>, Mark Hibberd <mark@hibberd.id.au>
copyright:             (c) 2016 Ambiata. (c) 2018-2019 Tim Humphries, Mark Hibberd
synopsis:              Projector is a typed, total HTML templating language.
cabal-version:         >= 1.8
build-type:            Simple
category:              Web, Text, Template
description:
  Projector is a typed, total HTML templating language.

  Projector templates can be typechecked, statically analyzed, partially
  evaluated, optimised via rewrite rules, and compiled to any sensible
  DOM representation.

  Projector was designed to enable progressive enhancement, but is also
  useful as a general-purpose type-safe templating system. It provides a
  number of static guarantees and a fast feedback cycle, while also
  decoupling your views from your current choice of framework.

library
  ghc-options:
                       -Wall

  build-depends:
                       base                            >= 3          && < 5
                     , projector-core
                     , projector-core-test
                     , projector-html
                     , containers
                     , directory
                     , filepath
                     , hedgehog                        == 0.6.*
                     , semigroups
                     , syb
                     , text
                     , temporary                       == 1.2.*

  exposed-modules:
                     Test.IO.Projector.Html.Backend.Property
                     Test.Projector.Html.Gen
